// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate has the correct error rate 1`] = `
Array [
  Object {
    "x": 1627373280000,
    "y": 0.4,
  },
  Object {
    "x": 1627373340000,
    "y": 0.25,
  },
  Object {
    "x": 1627373400000,
    "y": 0,
  },
  Object {
    "x": 1627373460000,
    "y": 0,
  },
  Object {
    "x": 1627373520000,
    "y": 0,
  },
  Object {
    "x": 1627373580000,
    "y": 0,
  },
  Object {
    "x": 1627373640000,
    "y": 0,
  },
  Object {
    "x": 1627373700000,
    "y": 0,
  },
  Object {
    "x": 1627373760000,
    "y": 0.0833333333333333,
  },
  Object {
    "x": 1627373820000,
    "y": null,
  },
  Object {
    "x": 1627373880000,
    "y": 0,
  },
  Object {
    "x": 1627373940000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627374000000,
    "y": 0.2,
  },
  Object {
    "x": 1627374060000,
    "y": 0,
  },
  Object {
    "x": 1627374120000,
    "y": 0,
  },
  Object {
    "x": 1627374180000,
    "y": 0,
  },
  Object {
    "x": 1627374240000,
    "y": 0,
  },
  Object {
    "x": 1627374300000,
    "y": 0.285714285714286,
  },
  Object {
    "x": 1627374360000,
    "y": 0,
  },
  Object {
    "x": 1627374420000,
    "y": 0.0769230769230769,
  },
  Object {
    "x": 1627374480000,
    "y": 0.142857142857143,
  },
  Object {
    "x": 1627374540000,
    "y": 0,
  },
  Object {
    "x": 1627374600000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627374660000,
    "y": 0,
  },
  Object {
    "x": 1627374720000,
    "y": 0,
  },
  Object {
    "x": 1627374780000,
    "y": 0.5,
  },
  Object {
    "x": 1627374840000,
    "y": 0,
  },
  Object {
    "x": 1627374900000,
    "y": 0,
  },
  Object {
    "x": 1627374960000,
    "y": 0,
  },
  Object {
    "x": 1627375020000,
    "y": 0,
  },
  Object {
    "x": 1627375080000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 1`] = `
Array [
  Object {
    "x": 1627374180000,
    "y": 0,
  },
  Object {
    "x": 1627374240000,
    "y": 0,
  },
  Object {
    "x": 1627374300000,
    "y": 0.285714285714286,
  },
  Object {
    "x": 1627374360000,
    "y": 0,
  },
  Object {
    "x": 1627374420000,
    "y": 0.0769230769230769,
  },
  Object {
    "x": 1627374480000,
    "y": 0.142857142857143,
  },
  Object {
    "x": 1627374540000,
    "y": 0,
  },
  Object {
    "x": 1627374600000,
    "y": 0.133333333333333,
  },
  Object {
    "x": 1627374660000,
    "y": 0,
  },
  Object {
    "x": 1627374720000,
    "y": 0,
  },
  Object {
    "x": 1627374780000,
    "y": 0.5,
  },
  Object {
    "x": 1627374840000,
    "y": 0,
  },
  Object {
    "x": 1627374900000,
    "y": 0,
  },
  Object {
    "x": 1627374960000,
    "y": 0,
  },
  Object {
    "x": 1627375020000,
    "y": 0,
  },
  Object {
    "x": 1627375080000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 2`] = `
Array [
  Object {
    "x": 1627374180000,
    "y": 0.4,
  },
  Object {
    "x": 1627374240000,
    "y": 0.25,
  },
  Object {
    "x": 1627374300000,
    "y": 0,
  },
  Object {
    "x": 1627374360000,
    "y": 0,
  },
  Object {
    "x": 1627374420000,
    "y": 0,
  },
  Object {
    "x": 1627374480000,
    "y": 0,
  },
  Object {
    "x": 1627374540000,
    "y": 0,
  },
  Object {
    "x": 1627374600000,
    "y": 0,
  },
  Object {
    "x": 1627374660000,
    "y": 0.0833333333333333,
  },
  Object {
    "x": 1627374720000,
    "y": null,
  },
  Object {
    "x": 1627374780000,
    "y": 0,
  },
  Object {
    "x": 1627374840000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627374900000,
    "y": 0.2,
  },
  Object {
    "x": 1627374960000,
    "y": 0,
  },
  Object {
    "x": 1627375020000,
    "y": 0,
  },
  Object {
    "x": 1627375080000,
    "y": null,
  },
]
`;
